fix: details card text align right

--- a/app/src/ui/svpervnder/collections/larskristo_hellheads/details-modal/DetailsModal.module.scss
+++ b/app/src/ui/svpervnder/collections/larskristo_hellheads/details-modal/DetailsModal.module.scss
@@ -50,6 +50,10 @@
     &--row {
       display: flex;
       justify-content: space-between;
+
+      &-right {
+        text-align: right;
+      }
     }
   }
 
